# EFREI-Roids

./: 1_Prendre en main le Framework d'affichage.adoc  2_Créer une classe Asteroid.adoc  Asteroid.cpp  Asteroid.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  FlyingObject.cpp  FlyingObject.hpp  Menu.cpp  Menu.hpp  Missile.cpp  Missile.hpp  Model.cpp  Model.hpp  README.adoc  README.md  Spaceship.cpp  Spaceship.hpp  View.cpp  View.hpp  framework.cpp  framework.hpp  main.cpp  sdl2-config.cmake  sdl2_image-config.cmake  sdl2_mixer-config.cmake
AdobeIllustrator/: asteroid.ai  asteroid1.ai  asteroid2.ai  asteroid3.ai  asteroid4.ai  button.ai  fondjeu.ai  homescreen.ai  missile.ai  redspaceship.ai  spaceship.ai
Levels/: level1.txt  level10.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
consignes/: 10_Implémentez des mécanismes de destruction.adoc  11_Implémentez un système de bouclier du vaisseau.adoc  12_Gérer un ensemble dynamique d'astéroïdes.adoc  13_Implémenter l'explosion d'astéroïdes.adoc  2_Créer une classe Asteroid.adoc  3_Créer une classe Missile.adoc  4_Implémenter la collision entre un missile et un astéroïde.adoc  5_Créer une classe Spaceship.adoc  6_Implémenter un modèle MVC – Le Contrôleur.adoc  7_Implémenter un modèle MVC – Le Modèle.adoc  8_Implémenter un jeu complet – La Vue.adoc  9_Initialiser aléatoirement l’astéroïde.adoc
include/hpp/: Asteroid.hpp  Controller.hpp  GameOver.hpp  Missile.hpp  Model.hpp  SettingsMenu.hpp  Spaceship.hpp  View.hpp  framework.hpp
src/: Asteroid.cpp  Controller.cpp  FlyingObject.cpp  GameOver.cpp  Level.cpp  Menu.cpp  Missile.cpp  Model.cpp  SettingsMenu.cpp  Spaceship.cpp  View.cpp  framework.cpp  main.cpp
